project/v0.6/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-deployment
spec:
  selector:
    matchLabels:
      app: project
  replicas: 1
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: project-data
          persistentVolumeClaim:
            claimName: project-claim
      containers:
      - name: project-container
        image: santlemp/project:0.6
        volumeMounts:
          - mountPath: /project-data
            name: project-data
